2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix segfault.

2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Fix.

2007-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c (set_tape): Don't amfree(tape).
	* oldrecover-src/set_commands.c (set_tape): Don't amfree(tape).

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Ouput quoted diskname in "DUMP SUMMARY"
	  section.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/scsi-linux.c, common-src/security-util.c,
	  common-src/stream.c, oldrecover-src/amrecover.c,
	  restore-src/restore.c, server-src/amcheck.c,
	  server-src/taper.c: Use SIZE_T_FMT and SSIZE_T_FMT instead of %z.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/debug.c: Remove old file in current directory.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in: Typo.

2007-02-21  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Remove match for path_on_disk_slash.

2007-02-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Set splitsize to 0 if no data in file.
	* server-src/amflush.c: Don't send FLUSH request if no data in file.
	* server-src/planner.c: Don't send FLUSH request if no data in file.
	* server-src/driver.c: Don't send request to taper if no data in file.

2007-02-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amverify.sh.in: Remove bogus fi.

2007-02-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amverify.sh.in: Add timeout on wait for device ready.
	* changer-src/chg-chio.pl.in: Wait (with timeout) for drive ready.

2007-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Don't call free_server_config.

2007-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* patching file oldrecover-src/amrecover.h (local_cd): Prototype.