@@ -1,4 +1,8 @@
 2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* changer-src/chg-zd-mtx.sh.in: Exit with a message if the
+					configuration file doesn't exist.
+
+2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
 	* amandad-src/amandad.c: Fix segfault.
 
 2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
